@@ -5,6 +5,7 @@
 	* Requires TYPO3 4.5+
 	* Resolves #51950: Deprecation Message t3lib_htmlmail->t3lib_htmlmail()
 	* Follow-up to #50838: Non existing token crashes site
+	* Initialize $GLOBALS['TCA']['fe_users']['feInterface'] when not set (TYPO3 6.2)
 
 2013-08-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #50607: sr_freecap Captcha might not be accepted after submission (Thanks to Roland Schenke)
